# great-minds

./: .dockerignore  .gitignore  .ok.swp  API.md  Dockerfile  alembic.ini  autoresearch.ideas.md  claude-log.md  config.yaml  docker-compose.yml  justfile  logging_config.py  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt  target_architecture.md  webui_mockup.jsx
.agents/: school1-architecture.md
alembic/: absurd.sql  env.py
alembic/versions/: 0001_initial_schema.py  0002_documents_and_backlinks.py  0002_fix_doc_kind.py  0002_proposal_dest_path.py  0003_add_idea_embeddings.py  0004_rename_scope_note_to_description.py  0005_add_source_type_to_documents.py  0016831828fa_add_source_proposals_table.py  45168c6db305_api_key_hash_to_sha256.py  a5b64316c136_add_user_and_auth_tables.py  bbd7c8738bc0_auth_codes_keyed_by_email_not_user_id.py  bf89776aff8d_add_brain_and_membership_tables.py  c8658f05c8dc_drop_brain_slug_unique_constraint_and_.py  d4a1e7f3b902_add_tasks_table.py  e7f2a3b1c405_rename_brain_type_to_kind.py  f1a2b3c4d5e6_init_absurd_schema.py
ingest/: crawl_lenin.py
prompts/: enrich.md  index_update.md  plan.md  write_article.md
scrapers/: _filters.py  crawl_copeland.py  crawl_lenin.py  crawl_liberation_news.py  crawl_liberation_school.py  crawl_marcy.py  crawl_marx.py  filter_liberation_news.py  ocr_pdf.py  pdf_to_md.py  split_liberation_media.py  split_psl_books.py  upload_corpus.py
scripts/: bulk_ingest_corpus.py  check_dupes.py  check_tsquery.py  check_tsv.py  debug_extract.py  diagnose_canonicalize.py  diagnose_distill.py  digest_articles.py  digest_articles_clustering.py  digest_articles_finegrained.py  digest_articles_simple.py  fetch_cnn_articles.py  reindex.py  run_canonicalize.py  run_distill.py  run_extract.py  run_render.py  score_digest.py  summarize.html  summarize_server.py  test_archive_flow.py  test_convergence.py  test_lint_report.py  test_r2_storage.py  test_search.py  transcribe.py
src/great_minds/: __init__.py  brain.py  cli.py  compiler.py  ingester.py  linter.py  llm.py  querier.py  server.py  sessions.py  storage.py  tasks.py  telemetry.py
src/great_minds/api/: db.py  server.py  settings.py
src/great_minds/core/: __init__.py  authz.py  brain.py  brain_config.py  brain_utils.py  chunking.py  compile_pipeline.py  compiler.py  crypto.py  db.py  default_config.yaml  hashing.py  ids.py  ingest_service.py  ingester.py  lint.py  linter.py  llm.py  mail.py  markdown.py  pagination.py  paths.py  querier.py  r2.py  r2_admin.py  search.py  sessions.py  settings.py  sources.py  storage.py  storage_factory.py  summarizer.py  tasks.py  telemetry.py  text.py  workers.py
src/great_minds/default_prompts/: write_article.md
src/retrieval_baseline/: llama_index.py  preprocess_docs.py  server.py
tools/: compile.py  ingest.py  lint.py  query.py
tsp_references/transcripts/: In The News 4_3_26 FULL v_5.txt  TSP IN THE NEWS 041825 Full v_2.txt  TSP IN THE NEWS 042525 FULL v_2.txt  TSP IN THE NEWS 050225 Full v_2.txt  TSP IN THE NEWS 050925 Full v_2.txt  TSP IN THE NEWS 051625 Full v_2.txt  TSP ITN 032726 v_2.txt  TSP NEWS 010526 podcast v_3.txt  TSP NEWS 010926 Full v_4.txt  TSP NEWS 011626 FULL v_3.txt  TSP NEWS 012326 Full v_6.txt  TSP NEWS 013026 Full v_2.txt  TSP NEWS 021726 Full v_3.txt  TSP NEWS 031326 v_1.txt  TSP NEWS 032026 FULL v_4.txt  TSP NEWS 052325 Full v_2.txt
web/: .oxfmtrc.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: api-keys.ts  brains.ts  client.ts  compile.ts  corpus.ts  doc.ts  explore.ts  ingest.ts  proposals.ts  query.ts  schemas.ts  sessions.ts  sources.ts  vaults.ts  wiki.ts
web/src/hooks/: use-brain.ts  (+21 more)
(+234 files in other folders)
