[project]
name = "great-minds"
version = "0.1.0"
description = "LLM-powered research knowledge base framework"
requires-python = ">=3.13"
dependencies = [
    "absurd-sdk>=0.3.0",
    "accelerate>=1.13.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.88",
    "crawl4ai>=0.8.6",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "markitdown>=0.1.5",
    "modal>=1.4.1",
    "openai>=2.0.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.24",
    "resend>=2.27.0",
    "ruamel.yaml>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "torch>=2.8.0,<2.9",
    "transformers>=5.5.3",
    "uvicorn>=0.44.0",
]

[project.scripts]
great-minds = "great_minds.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = ["nvidia-cusparselt-cu12>=0.8.1"]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
nvidia-cusparselt-cu12 = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff.lint]
ignore = ["E712"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
